Updating titles on all pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Prem's Really Cool Website (Better than Pip's)</title>
+        <title>Prem Rao</title>
         <link rel="stylesheet" href="stylesheet.css" />
     </head>
     <body>
