--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>About Me</title>
+        <title>About Me - Prem Rao</title>
         <link rel="stylesheet" href="stylesheet.css" />
     </head>
     <body>
