--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <!--Main page content!-->
         <main>
-            <!--Making a sidebar class-->
-            <div class="sidebar">
+            <!--Making a navbar class-->
+            <div class="navbar">
                 <!--Adding a horizontal line-->
                 <hr>
                 <!--Adding links to other pages-->
