--- a/research.html
+++ b/research.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <main>
-            <!--Making a sidebar class-->
-            <div class="sidebar">
+            <!--Making a navbar class-->
+            <div class="navbar">
                 <!--Adding a horizontal line-->
                 <hr>
                 <!--Adding links to other pages-->
