--- a/research.html
+++ b/research.html
@@ -8,21 +8,22 @@
     </head>
     <body>
         <main>
+            <div class="intro-text">
+                <h1>Prem Rao</h1>
+            </div>
             <!--Making a navbar class-->
             <div class="navbar">
-                <!--Adding a horizontal line-->
-                <hr>
-                <!--Adding links to other pages-->
-                <!--Main page link-->
-                <div class="page-link"><a href="index.html">Main</a></div>
-                <!--About page link-->
-                <div class="page-link"><a href="about.html">About Me</a></div>
-                <!--Research page-->
-                <div class="page-link"><a href="research.html">Research</a></div>
-                <!--Outreach page-->
-                <div class="page-link"><a href="outreach.html">Outreach</a></div>
-                <!--Adding another horizontal line-->
-                <hr>
+                <div class="row">
+                    <!--Adding links to other pages-->
+                    <!--Main page link-->
+                    <div class="page-link"><a href="index.html">Main</a></div>
+                    <!--About page link-->
+                    <div class="page-link"><a href="about.html">About Me</a></div>
+                    <!--Research page-->
+                    <div class="page-link"><a href="research.html">Research</a></div>
+                    <!--Outreach page-->
+                    <div class="page-link"><a href="outreach.html">Outreach</a></div>
+                </div>
             <!--End of sidebar-->
             </div>
 
