Adding a grid for resume items

--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
             <p>Hi! I'm</p>
             <strong>Prem Rao</strong>
         </div>
+        <div class="academics-grid">
+            <p class="grid-date">2021</p>
+            <p class="grid-content">B.A. in Computer Science from Case Western Reserve University</p>
+
+            <p class="grid-date">2021</p>
+            <p class="grid-content">B.A. in Physics from Case Western Reserve University</p>
+
+            <p class="grid-date">2023</p>
+            <p class="grid-content">M.S. in Physics from Case Western Reserve University</p>
+        </div>
     </body>
 </html>
