Adding a title to grid

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
         <title>Prem Rao</title>
     </head>
     <body>
+        <!--Profile image!-->
         <div class="profile-img">
             <p>Hi! I'm</p>
             <strong>Prem Rao</strong>
         </div>
+        <!--Title for academic achievements-->
+        <h1><span>Academic Achievements</span></h1>
+        <!--Grid for academic achievements-->
         <div class="academics-grid">
             <p class="grid-date">2021</p>
             <p class="grid-content">B.A. in Computer Science from Case Western Reserve University</p>
