Adding teaching experience section

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
             <p>Hi! I'm</p>
             <strong>Prem Rao</strong>
         </div>
+
         <!--Title for academic achievements-->
         <h1><span>Academic Achievements</span></h1>
         <!--Grid for academic achievements-->
-        <div class="academics-grid">
+        <div class="cv-grid">
             <p class="grid-date">2021</p>
             <p class="grid-content">B.A. in Computer Science from Case Western Reserve University</p>
 
@@ -23,6 +24,15 @@
 
             <p class="grid-date">2023</p>
             <p class="grid-content">M.S. in Physics from Case Western Reserve University</p>
+        </div>
+
+        <!--Teaching experience-->
+        <!--Title-->
+        <h1><span>Teaching Experience</span></h1>
+        <!--Grid items-->
+        <div class="cv-grid">
+            <p class="grid-date">Spring 2020</p>
+            <p class="grid-content">Designed and assisted teaching new introductory climate change course at CWRU</p>
         </div>
     </body>
 </html>
