Styling profile image text better

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <!--Profile image!-->
         <div class="profile-img">
-            <p>Hi! I'm</p>
-            <strong>Prem Rao</strong>
+            <p class="profile-text">Hi! I'm</p>
+            <strong class="profile-text">Prem Rao</strong>
         </div>
 
         <!--Title for academic achievements-->
