Finishing teaching experience

--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
         <!--Grid for academic achievements-->
         <div class="cv-grid">
             <p class="grid-date">2021</p>
-            <p class="grid-content">B.A. in Computer Science from Case Western Reserve University</p>
+            <p class="grid-content">
+                B.A. in Computer Science from Case Western Reserve University
+            </p>
 
             <p class="grid-date">2021</p>
-            <p class="grid-content">B.A. in Physics from Case Western Reserve University</p>
+            <p class="grid-content">
+                B.A. in Physics from Case Western Reserve University
+            </p>
 
             <p class="grid-date">2023</p>
-            <p class="grid-content">M.S. in Physics from Case Western Reserve University</p>
+            <p class="grid-content">
+                M.S. in Physics from Case Western Reserve University
+            </p>
         </div>
 
         <!--Teaching experience-->
@@ -32,7 +38,22 @@
         <!--Grid items-->
         <div class="cv-grid">
             <p class="grid-date">Spring 2020</p>
-            <p class="grid-content">Designed and assisted teaching new introductory climate change course at CWRU</p>
+            <p class="grid-content">
+                <span class="first-sentence">Teaching Assistant:</span>
+                Designed and assisted teaching new introductory climate change course at CWRU
+            </p>
+
+            <p class="grid-date">Fall 2021 - <br/> Spring 2022</p>
+            <p class="grid-content">
+                <span class="first-sentence">Introductory Lab Proctor:</span>
+                Led an introductory physics lab for undergraduate students at CWRU
+            </p>
+
+            <p class="grid-date">Fall 2022</p>
+            <p class="grid-content">
+                <span class="first-sentence">Teaching Assistant:</span>
+                Teaching assistant for upper level undergraduate Electricity and Magnetism course
+            </p>
         </div>
     </body>
 </html>
