Adding industry experience

--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
             </p>
         </div>
 
+        <!--Industry experience-->
+        <!--Title-->
+        <h1><span>Industry Experience</span></h1>
+        <!--Grid-->
+        <div class="cv-grid">
+            <p class="grid-date">Summer 2019</p>
+            <p class="grid-content">
+                <span class="first-sentence">Intern at World Wide Technology:</span>
+                Software engineering intern in the Agile Office at World Wide Technology in St. Louis, Missouri.
+                Created an API using JavaScript to query and process data from a database.
+            </p>
+
+            <p class="grid-date">Fall 2023 - Present</p>
+            <p class="grid-content">
+                <span class="first-sentence">Contractor at HARKVision:</span>
+                Solo full stack developer, creating software to run camera for capturing images of patient’s eyes.
+            </p>
+        </div>
+
         <!--Teaching experience-->
         <!--Title-->
         <h1><span>Teaching Experience</span></h1>
@@ -40,19 +59,19 @@
             <p class="grid-date">Spring 2020</p>
             <p class="grid-content">
                 <span class="first-sentence">Teaching Assistant:</span>
-                Designed and assisted teaching new introductory climate change course at CWRU
+                Designed and assisted teaching new introductory climate change course at CWRU.
             </p>
 
             <p class="grid-date">Fall 2021 - <br/> Spring 2022</p>
             <p class="grid-content">
                 <span class="first-sentence">Introductory Lab Proctor:</span>
-                Led an introductory physics lab for undergraduate students at CWRU
+                Led an introductory physics lab for undergraduate students at CWRU.
             </p>
 
             <p class="grid-date">Fall 2022</p>
             <p class="grid-content">
                 <span class="first-sentence">Teaching Assistant:</span>
-                Teaching assistant for upper level undergraduate Electricity and Magnetism course
+                Teaching assistant for upper level undergraduate Electricity and Magnetism course.
             </p>
         </div>
     </body>
