Adding other experience

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 Created an API using JavaScript to query and process data from a database.
             </p>
 
-            <p class="grid-date">Fall 2023 - Present</p>
+            <p class="grid-date">Fall 2023 - <br/> Present</p>
             <p class="grid-content">
                 <span class="first-sentence">Contractor at HARKVision:</span>
                 Solo full stack developer, creating software to run camera for capturing images of patient’s eyes.
@@ -72,6 +72,24 @@
             <p class="grid-content">
                 <span class="first-sentence">Teaching Assistant:</span>
                 Teaching assistant for upper level undergraduate Electricity and Magnetism course.
+            </p>
+        </div>
+
+        <!--Other experience-->
+        <!--Title-->
+        <h1><span>Other Experience</span></h1>
+        <!--Grid-->
+        <div class="cv-grid">
+            <p class="grid-date">Fall 2022 - <br/> Spring 2023</p>
+            <p class="grid-content">
+                <span class="first-sentence">Physics Graduate Student Association President at CWRU:</span>
+                Revitalized the Physics Graduate Student Assoc. at CWRU; represented student interests to faculty/staff.
+            </p>
+
+            <p class="grid-date">Summer 2022 - <br/> Winter 2023</p>
+            <p class="grid-content">
+                <span class="first-sentence">Independent Consultant at Case Western Reserve University:</span>
+                Writing and publishing a paper on the meridional dependence of the tropopause.
             </p>
         </div>
     </body>
