Updating industry experience

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                 <span class="first-sentence">Contractor at HARKVision:</span>
                 Solo full stack developer, creating software to run camera for capturing images of patient’s eyes.
             </p>
+
+            <p class="grid-date">Fall 2023 - <br/> Present</p>
+            <p class="grid-content">
+                <span class="first-sentence">Front of House at Balkan Treat Box:</span>
+                Front of house staff at Balkan Treat Box, a popular restaurant in St. Louis, Missouri.
+            </p>
         </div>
 
         <!--Teaching experience-->
