Adding an introductory paragraph

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
             <strong class="profile-text">Prem Rao</strong>
         </div>
 
+        <div id="intro">
+            <p>
+                Hi! I'm Prem Rao, a recent graduate from Case Western Reserve University (CWRU) with a Master of Science in Physics.
+                I also earned a Bachelors of Arts in both Physics and Computer Science, both from Case Western Reserve University. 
+                I’m looking to broaden the skill-set I have as a researcher, academic and educator.
+            </p>
+        </div>
+
         <!--Title for academic achievements-->
         <h1><span>Academic Achievements</span></h1>
         <!--Grid for academic achievements-->
