--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles/global.css"/>
         <link rel="stylesheet" href="styles/index.css"/>
         <title>Prem Rao</title>
     </head>
