Adding a nav bar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             <strong class="profile-text">Prem Rao</strong>
         </div>
 
+        <ul class="navbar">
+            <!--Active page!-->
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="research.html">Research</a></li>
+        </ul>
+
         <div id="intro">
             <p>
                 Hi! I'm Prem Rao, a recent graduate from Case Western Reserve University (CWRU) with a Master of Science in Physics.
