Adding research page styling

--- a/research.html
+++ b/research.html
@@ -3,13 +3,17 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles/global.css"/>
+        <link rel="stylesheet" href="styles/research.css"/>
         <title>Prem Rao</title>
     </head>
     <body>
+        <div class="research-title">
+        </div>
         <ul class="navbar">
             <!--Active page!-->
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="research.html">Research</a></li>
         </ul>
+        <p>Coming Soon!</p>
     </body>
 </html>
