Adding buttons to select first move and reset board

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -35,6 +35,18 @@
             </div>
         </div>
 
+        <div class="container">
+            <!--Buttons for resetting and selecting opponents-->
+            <div class="opponent-grid">
+                <!--If selected, computer moves first-->
+                <button class="not-selected">Computer First</button>
+                <!--If selected, player moves first-->
+                <button class="not-selected">You First</button>
+                <!--Resets the board-->
+                <button class="button">Reset</button>
+            </div>
+        </div>
+
         <!--Scripts for tictactoe-->
         <script src="js/board.js"></script>
         <script src="js/solver.js"></script>
