Stylesheet for tictactoe page

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles/global.css"/>
-        <link rel="stylesheet" href="styles/research.css"/>
+        <link rel="stylesheet" href="styles/tictactoe.css"/>
         <!--Tictactoe board style-->
         <link rel="stylesheet" href="styles/board.css"/>
         <title>Prem Rao: TicTacToe</title>
