--- a/tictactoe.html
+++ b/tictactoe.html
@@ -39,11 +39,23 @@
             <!--Buttons for resetting and selecting opponents-->
             <div class="opponent-grid">
                 <!--If selected, computer moves first-->
-                <button class="not-selected">Computer First</button>
+                <button class="pushable">
+                    <span class="front">
+                        Computer First
+                    </span>
+                </button>
                 <!--If selected, player moves first-->
-                <button class="not-selected">You First</button>
+                <button class="pushable">
+                    <span class="front">
+                        You First
+                    </span>
+                </button>
                 <!--Resets the board-->
-                <button class="button">Reset</button>
+                <button class="pushable">
+                    <span class="front">
+                        Reset
+                    </span>
+                </button>
             </div>
         </div>
 
