Making reset button functional

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -51,7 +51,7 @@
                     </span>
                 </button>
                 <!--Resets the board-->
-                <button class="pushable">
+                <button id="reset" class="pushable">
                     <span class="front">
                         Reset
                     </span>
