Making player and computer turns functional

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -39,13 +39,13 @@
             <!--Buttons for resetting and selecting opponents-->
             <div class="opponent-grid">
                 <!--If selected, computer moves first-->
-                <button class="pushable">
-                    <span class="front">
+                <button id="computer-turn" class="pushable">
+                    <span class="front active">
                         Computer First
                     </span>
                 </button>
                 <!--If selected, player moves first-->
-                <button class="pushable">
+                <button id="player-turn" class="pushable">
                     <span class="front">
                         You First
                     </span>
