Adding a title to page

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -16,6 +16,10 @@
         </ul>
 
         <div class="container">
+            <h1><span>TicTacToe</span></h1>
+        </div>
+
+        <div class="container">
             <!--Grid for board-->
             <div id="board" class="board-grid">
                 <!--First row of buttons-->
