Changing page title on victory, loss or draw

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -16,7 +16,7 @@
         </ul>
 
         <div class="container">
-            <h1><span>TicTacToe</span></h1>
+            <h1><span id="title">TicTacToe</span></h1>
         </div>
 
         <div class="container">
