Adding tictactoe to navbar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <!--Active page!-->
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
+            <li style="float:right"><a href="tictactoe.html">Play Me in TicTacToe!</a></li>
         </ul>
 
         <div id="intro">
