--- a/research.html
+++ b/research.html
@@ -13,6 +13,7 @@
             <!--Active page!-->
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="research.html">Research</a></li>
+            <li style="float:right"><a href="tictactoe.html">Play Me in TicTacToe!</a></li>
         </ul>
         <p>Coming Soon!</p>
     </body>
