--- a/tictactoe.html
+++ b/tictactoe.html
@@ -13,6 +13,7 @@
             <!--Active page!-->
             <li><a href="index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
+            <li style="float:right"><a class="active" href="tictactoe.html">Play Me in TicTacToe!</a></li>
         </ul>
 
         <div class="container">
