Adding another picture of me on index!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <li style="float:right"><a href="tictactoe.html">Play Me in TicTacToe!</a></li>
         </ul>
 
-        <div id="intro">
+        <div class="intro-grid" id="intro">
+            <img id="intro-img" src="img/forest_me.jpg" alt="Me in a Forest"/>
             <p>
                 Hi! I'm Prem Rao, a recent graduate from Case Western Reserve University (CWRU) with a Master of Science in Physics.
                 I also earned a Bachelors of Arts in both Physics and Computer Science, both from Case Western Reserve University. 
