--- a/index.html
+++ b/index.html
@@ -115,5 +115,21 @@
                 Writing and publishing a paper on the meridional dependence of the tropopause.
             </p>
         </div>
+
+        <!-- Social Bar -->
+        <ul class="socials">
+            <!-- LinkedIn!!! -->
+            <li>
+                <a href="https://www.linkedin.com/in/prem-rao/">
+                    <img src="img/LI-In-Bug.png" alt="LinkedIn"/>
+                </a>
+            </li>
+            <!-- Github!!! -->
+            <li>
+                <a href="https://github.com/prao3">
+                    <img src="img/github_logo.png" alt="Github"/>
+                </a>
+            </li>
+        </ul>
     </body>
 </html>
