Adding socials to other pages

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -68,5 +68,21 @@
         <script src="js/board.js"></script>
         <script src="js/solver.js"></script>
         <script src="js/tictactoe.js"></script>
+
+        <!-- Social Bar -->
+        <ul class="socials">
+            <!-- LinkedIn!!! -->
+            <li>
+                <a href="https://www.linkedin.com/in/prem-rao/">
+                    <img src="img/LI-In-Bug.png" alt="LinkedIn"/>
+                </a>
+            </li>
+            <!-- Github!!! -->
+            <li>
+                <a href="https://github.com/prao3">
+                    <img src="img/github_logo.png" alt="Github"/>
+                </a>
+            </li>
+        </ul>
     </body>
 </html>
