--- a/research.html
+++ b/research.html
@@ -16,5 +16,21 @@
             <li style="float:right"><a href="tictactoe.html">Play Me in TicTacToe!</a></li>
         </ul>
         <p>Coming Soon!</p>
+
+        <!-- Social Bar -->
+        <ul class="socials">
+            <!-- LinkedIn!!! -->
+            <li>
+                <a href="https://www.linkedin.com/in/prem-rao/">
+                    <img src="img/LI-In-Bug.png" alt="LinkedIn"/>
+                </a>
+            </li>
+            <!-- Github!!! -->
+            <li>
+                <a href="https://github.com/prao3">
+                    <img src="img/github_logo.png" alt="Github"/>
+                </a>
+            </li>
+        </ul>
     </body>
 </html>
