Adding social bar to other pages

--- a/research.html
+++ b/research.html
@@ -15,7 +15,7 @@
             <li><a class="active" href="research.html">Research</a></li>
             <li style="float:right"><a href="tictactoe.html">Play Me in TicTacToe!</a></li>
         </ul>
-        <p>Coming Soon!</p>
+        <p class="placeholder">Coming Soon!</p>
 
         <!-- Social Bar -->
         <ul class="socials">
