Adding CWRU logo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!--Title for academic achievements-->
         <h1><span>Academic Achievements</span></h1>
         <!--Grid for academic achievements-->
-        <div class="cv-grid">
+        <div class="academic-grid">
             <p class="grid-date">2021</p>
             <p class="grid-content">
                 B.A. in Computer Science from Case Western Reserve University
@@ -47,6 +47,9 @@
             <p class="grid-content">
                 M.S. in Physics from Case Western Reserve University
             </p>
+            <div class="academic-grid-image">
+                <img src="img/cwru_logo.png" alt="CWRU Logo"/>
+            </div>
         </div>
 
         <!--Industry experience-->
