--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!--Title-->
         <h1><span>Industry Experience</span></h1>
         <!--Grid-->
-        <div class="cv-grid">
+        <div class="industry-grid">
             <p class="grid-date">Summer 2019</p>
             <p class="grid-content">
                 <span class="first-sentence">Intern at World Wide Technology:</span>
@@ -75,6 +75,9 @@
                 <span class="first-sentence">Front of House at Balkan Treat Box:</span>
                 Front of house staff at Balkan Treat Box, a popular restaurant in St. Louis, Missouri.
             </p>
+            <div class="industry-grid-img">
+                <img src="img/WWT_Monogram_RGB_Color.png" alt="WWT Logo"/>
+            </div>
         </div>
 
         <!--Teaching experience-->
