Adding more text to intro

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 Hi! I'm Prem Rao, a recent graduate from Case Western Reserve University (CWRU) with a Master of Science in Physics.
                 I also earned a Bachelors of Arts in both Physics and Computer Science, both from Case Western Reserve University. 
                 I’m looking to broaden the skill-set I have as a researcher, academic and educator.
+                <br/>
+                <br/>
+                I'm interested in climate physics and understanding how anthropogenic climate change will impact human life in the future.
+                My most recent project focused on understanding the meridional structure of the tropopause, and is in the process of publication!
             </p>
         </div>
 
